#
# $Id: Makefile.am,v 1.4 2003/06/15 16:50:51 cholm Exp $ 
#  
#  Copyright (C) 2002 Christian Holm Christensen <cholm@nbi.dk> 
#
#  This library is free software; you can redistribute it and/or 
#  modify it under the terms of the GNU Lesser General Public License 
#  as published by the Free Software Foundation; either version 2.1 
#  of the License, or (at your option) any later version. 
#
#  This library is distributed in the hope that it will be useful, 
#  but WITHOUT ANY WARRANTY; without even the implied warranty of 
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU 
#  Lesser General Public License for more details. 
# 
#  You should have received a copy of the GNU Lesser General Public 
#  License along with this library; if not, write to the Free 
#  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
#  02111-1307 USA 
#

aclocaldir		= $(datadir)/aclocal
aclocal_DATA		= optionmm.m4
bin_SCRIPTS		= optionmm-config
man_MANS		= optionmm-config.1
EXTRA_DIST		= $(aclocal_DATA) $(bin_SCRIPTS) $(man_MANS)
CLEANFILES		= *~ 

#
# EOF
#
